--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
   },
   "homepage": "https://github.com/LarV123/Bubble-Shooter#readme",
   "devDependencies": {
-    "express": "^4.17.1",
     "live-server": "^1.2.1",
     "phaser": "^3.52.0",
     "ts-loader": "^8.0.14",
     "typescript": "^4.1.3",
     "webpack": "^5.18.0",
     "webpack-cli": "^4.4.0"
+  },
+  "dependencies": {
+    "express": "^4.17.1"
   }
 }
